--- a/spring-boot/lesson-1/spring-boot-lesson-1/src/main/resources/application.properties
+++ b/spring-boot/lesson-1/spring-boot-lesson-1/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port = 8080
-management.port = 8081
+#management.port = 8081
+management.server.port=8081
+management.endpoints.web.base-path=/monitor
+#http://localhost:8081/monitor/health
+#http://localhost:8081/actuator/health
+management.endpoints.web.exposure.include=*
 
 spring.mvc.view.prefix=WEB-INF/
 spring.mvc.view.suffix=.jsp
